--- a/Curs07/Ex03/css/style.css
+++ b/Curs07/Ex03/css/style.css
@@ -12,12 +12,18 @@ body {
 
 .box-1 {
   background-color: aquamarine;
+  border: 1px solid green;
+  color: purple;
 }
 
 .box-2 {
   background-color: brown;
+  border: 1px solid grey;
+  color: white;
 }
 
 .box-3 {
   background-color: bisque;
+  border: 1px solid blue;
+  color: red;
 }
