--- a/Curs08/Ex04/css/style.css
+++ b/Curs08/Ex04/css/style.css
@@ -1,4 +1,42 @@
 .container {
-  border: 1px solid #000; 
+  border: 1px solid #000;
   padding: 5px;
+}
+
+.nav-top {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #000;
+  z-index: 1;
+}
+
+.nav-top a {
+  color: #fff;
+}
+.container {
+  position: relative;
+}
+
+.legend {
+  position: absolute;
+  background-color: grey;
+  border: 1px solid red;
+}
+
+.sub {
+  position: relative;
+  bottom: -14px;
+}
+
+.nav-bottom {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  background-color: green;
+  z-index: 1;
+}
+
+.nav-bottom a {
+  color: #fff;
 }
