--- a/Curs08/Ex06/css/style.css
+++ b/Curs08/Ex06/css/style.css
@@ -1,70 +1,58 @@
 .my-div {
-  width: 500px;
-  height: 102px;
+  width: 300px;
+  height: 202px;
   background-color: red;
   border: 1px solid green;
+  box-shadow: 1px 1px 5px green;
   margin: 0 auto;
-  text-align: center;
-  color: #fff;
-  font-size: 25px;
-  font-weight: bold;
 }
 
 .blue {
-  width: 150px;
-  height: 300px;
+  width: 200px;
+  height: 100px;
   border-radius: 20px;
   background-color: blue;
-  padding-top: 25px;
-  padding-bottom: 10px;
-  padding-right: 21px;
-  padding-left: 13px;
-  color: #fff;
-  text-align: center;
-  font-size: 25px;
-  font-weight: bold;
+  padding: 15px;
+  box-shadow: inset 2px 2px 10px black;
 }
 
 .container {
-  width: 100%;
+  width: 75%;
   border: 3px solid green;
   padding: 15px;
-  color: #000;
-  text-align: center;
-  font-size: 25px;
-  font-weight: bold;
+  box-shadow: 3px 3px 2px blue;
 }
 
 .green {
   width: 500px;
   height: 220px;
   border: 1px solid #000;
-  padding: 13px 19px;
   background-color: green;
-  margin: 0 auto;
-  color: #fff;
-  text-align: center;
-  font-size: 25px;
-  font-weight: bold;
+  margin: 20px auto;
+  padding: 15px;
+  box-shadow: 15px 15px 2px gray;
 }
 
 .purple {
   background-color: purple;
   border: 2px dotted green;
   border-radius: 40px;
-  padding: 10px 15px 0 20px;
+  padding: 20px;
+  box-shadow: 5px 5px 5px brown;
 }
 
 .turquoise {
   background-color: turquoise;
   border: 1px solid blue;
   border-radius: 15px;
+  box-shadow: 2px 2px 5px red;
   padding: 11px 20px;
 }
 
 .transparent {
-  width: 300px;
+  width: 550px;
   border: 2px solid red;
+  box-shadow: 10px 10px 5px gray;
   padding: 20px;
   margin: 20px auto;
 }
