--- a/Curs10/Ex09/css/style.css
+++ b/Curs10/Ex09/css/style.css
@@ -1,16 +1,13 @@
 /* add code here */
 
-
-
 /* add code here */
 
-
 h1 {
- color: red;
+  color: red;
 }
 
 .header h1 {
-  color: blue;
+  color: red;
 }
 
 p {
@@ -18,6 +15,18 @@ p {
 }
 
 .para {
-  text-decoration: none; 
-  color: blueviolet
+  text-decoration: none;
+  color: blueviolet;
+}
+
+#header h1 {
+  color: green;
+  text-decoration: underline solid green;
+  padding: 5px;
+}
+
+#container .para {
+  font-size: 25px;
+  font-style: italic;
+  color: purple;
 }
