--- a/thread-affair/style/style.css
+++ b/thread-affair/style/style.css
@@ -242,4 +242,247 @@ table {
 
 body {
   font-family: 'Roboto', 'sans-serif';
+  color: #707070;
+  font-size: 16px;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.container {
+  width: 100%;
+  max-width: 1284px;
+  margin: 0 auto;
+}
+
+/* header */
+
+.header {
+  margin-top: 40px;
+}
+
+.header-customer-support {
+  float: left;
+}
+
+.header-customer-support li {
+  display: inline-block;
+}
+
+.header-customer-support li:first-child .icon {
+  font-size: 28px;
+  color: #ff6b6b;
+}
+
+.header-customer-support li:first-child::after {
+  margin: 0 16px;
+  content: '|';
+}
+
+.header-site-controls {
+  float: right;
+}
+
+.header-site-controls li {
+  display: inline-block;
+}
+
+.header-user-controls {
+  margin-right: 40px;
+}
+
+.header-user-controls .icon {
+  transform: translateY(-12px);
+}
+
+.header-cart-controls {
+  position: relative;
+}
+
+.header-cart-controls a :nth-child(1) {
+  font-size: 32px;
+}
+
+.header-cart-controls a :last-child {
+  background-color: #ff6b6b;
+  color: #fff;
+  padding: 3px 6px;
+  display: inline-block;
+  border-radius: 10px;
+  height: 21px;
+  position: absolute;
+  right: -8px;
+}
+
+.header-logo {
+  clear: both;
+  text-align: center;
+}
+
+/* nav-main */
+
+.header-bottom .nav-main {
+  margin-bottom: 20px;
+}
+
+.header-bottom .nav-main li {
+  display: inline-block;
+  margin: 0 16px;
+}
+
+.header-bottom .nav-main a {
+  transition: color 0.4s linear, background-color 0.4s linear;
+  padding: 8px 16px;
+  border-radius: 20px;
+}
+
+.header-bottom .nav-main a:hover {
+  color: #fff;
+  background-color: #ff6b6b;
+}
+
+.header-bottom .nav-main ul {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 300;
+  text-transform: uppercase;
+}
+
+/* nav-secondary */
+
+.header-bottom .nav-secondary {
+  text-align: center;
+}
+
+.header-bottom .nav-secondary ul {
+  text-align: center;
+  font-size: 14px;
+  font-weight: 300;
+  text-transform: uppercase;
+}
+
+.header-bottom .nav-secondary li {
+  display: inline-block;
+  margin: 0 16px;
+}
+
+.header-bottom .nav-secondary a {
+  transition: color 0.4s linear;
+}
+
+.header-bottom .nav-secondary a:hover {
+  color: #ff6b6b;
+}
+
+/* main */
+
+.content-header {
+  background: url('../images/banners/banner-01.jpg') center center / cover
+    no-repeat #1b1927;
+  height: 572px;
+}
+
+/* Footer */
+
+.footer {
+  margin-bottom: 48px;
+}
+
+/* footer-top */
+
+.footer-top {
+  background: #1b1927 url('../images/banners/banner-06.jpg') right center
+    no-repeat;
+  font-size: 14px;
+  color: #aeaeae;
+  text-transform: uppercase;
+  padding: 48px;
+}
+
+.footer-top .footer-nav {
+  display: flex;
+  margin-bottom: 32px;
+}
+
+.footer-top .footer-nav ul {
+  margin-right: 32px;
+}
+
+.footer-top .footer-nav li {
+  margin-bottom: 8px;
+}
+
+/* footer-support + footer-contact*/
+
+.footer-top .footer-support,
+.footer-top .footer-contact {
+  display: inline-block;
+}
+
+.footer-top .footer-support {
+  margin-right: 76px;
+}
+
+.footer-top .footer-support ul {
+  text-align: center;
+}
+
+.footer-top .footer-support li {
+  display: inline-block;
+  margin: 0 16px;
+}
+
+.footer-top .footer-support li:first-child {
+  margin-left: 0;
+}
+
+.footer-top .footer-support li:last-child {
+  margin-right: 0;
+}
+
+.footer-top .footer-support i[class^='fa-'] {
+  display: block;
+  font-size: 42px;
+  color: #ff6b6b;
+  margin-bottom: 16px;
+}
+
+/* footer-contact */
+
+.footer-top .footer-contact {
+  text-transform: initial;
+}
+
+.footer-top .footer-contact h1 {
+  text-transform: uppercase;
+  font-weight: 300;
+  margin-bottom: 16px;
+}
+
+.footer-top .footer-contact h1 span {
+  font-weight: 500;
+}
+
+.footer-top .footer-contact p {
+  line-height: 18px;
+  font-weight: 300;
+}
+
+.footer-top .footer-contact p a:last-of-type {
+  color: #ff6b6b;
+}
+
+/* footer-bottom */
+
+.footer-bottom {
+  margin-top: 24px;
+  text-align: center;
+  font-weight: 300;
+  font-size: 14px;
+}
+
+.footer-bottom p:first-of-type {
+  margin-bottom: 16px;
 }
