--- a/monochrome/style/style.css
+++ b/monochrome/style/style.css
@@ -18,6 +18,7 @@ a {
 }
 
 .container {
+  width: 100%;
   max-width: 1356px;
   margin: 0 auto;
 }
@@ -35,7 +36,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-width: 1077px;
+  padding: 0 150px;
 }
 /* header contact */
 
@@ -115,7 +116,7 @@ a {
 .nav-main ul {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   height: 100%;
 }
 
