--- a/thread-affair/style/style.css
+++ b/thread-affair/style/style.css
@@ -378,7 +378,7 @@ a {
 
 /* main */
 
-.content-header {
+.banner-main {
   background: url('../images/banners/banner-01.jpg') center center / cover
     no-repeat #1b1927;
   height: 572px;
