--- a/thread-affair/style/style.css
+++ b/thread-affair/style/style.css
@@ -260,7 +260,7 @@ a {
 /* header */
 
 .header {
-  margin-top: 40px;
+  margin: 40px auto 24px auto;
 }
 
 .header-customer-support {
@@ -377,13 +377,250 @@ a {
 }
 
 /* main */
+.content-header {
+  margin-bottom: 120px;
+}
 
 .banner-main {
   background: url('../images/banners/banner-01.jpg') center center / cover
     no-repeat #1b1927;
   height: 572px;
+  color: #fff;
+  font-weight: 300;
 }
 
+.banner-main .banner-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  align-items: flex-start;
+  padding-left: 50px;
+  position: relative;
+}
+
+.banner-main h1 {
+  font-size: 75px;
+  font-weight: 700;
+}
+
+.banner-main h2 {
+  font-size: 42px;
+  margin: 24px 0 48px 0;
+}
+
+.banner-main .banner-cta {
+  color: #ff6b6b;
+  font-size: 20px;
+  text-transform: uppercase;
+  border: 1px solid #ff6b6b;
+  padding: 24px 40px;
+  border-radius: 50px;
+  display: inline-block;
+  transition: color 0.2s linear, background-color 0.2s linear;
+}
+
+.banner-main .banner-cta:hover {
+  background-color: #ff6b6b;
+  color: #fff;
+}
+
+.banner-main p {
+  position: absolute;
+  font-size: 14px;
+  bottom: 40px;
+  left: 40px;
+  line-height: 20px;
+}
+
+/* content main */
+.content-main > section > header h1 {
+  font-size: 41px;
+  color: #292929;
+  font-weight: 300;
+  text-align: center;
+}
+
+.content-main > section > header h1 span {
+  font-weight: 500;
+  text-transform: capitalize;
+}
+
+.content-main > section {
+  margin-bottom: 120px;
+}
+
+/* home-catalog */
+.home-catalog-preview header p {
+  text-align: center;
+  margin-top: 16px;
+}
+
+.home-catalog-preview .product-tiles {
+  margin-top: 24px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.home-catalog-preview .product-tile {
+  width: 27.386541%; /*350/1278 * 100 */
+}
+
+.home-catalog-preview .product-tile-image {
+  position: relative;
+}
+
+.home-catalog-preview .product-tile img {
+  width: 100%;
+}
+
+.home-catalog-preview .product-tile-image .product-tile-badge {
+  font-size: 20px;
+  font-weight: 700;
+  color: #ff6b6b;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+.home-catalog-preview .product-tile .product-tile-title {
+  text-align: center;
+  font-size: 24px;
+  font-weight: 300;
+  margin-top: 30px;
+  color: #707070;
+}
+
+.home-catalog-preview .product-tile .product-tile-title span:nth-child(1) {
+  color: #292929;
+  font-weight: 500;
+}
+
+.home-catalog-preview .product-tile .product-tile-title span:nth-child(2) {
+  font-weight: 500;
+}
+
+.home-catalog-preview .product-tile .product-tile-subtitle {
+  text-align: center;
+  font-weight: 300;
+  font-size: 18px;
+}
+
+.home-catalog-preview .product-tile .product-tile-princing {
+  text-align: center;
+  margin: 19px 0;
+  font-weight: 300;
+  font-size: 24px;
+}
+
+.home-catalog-preview
+  .product-tile
+  .product-tile-princing
+  .product-price-regular {
+  display: block;
+  font-size: 18px;
+  text-decoration: line-through;
+  margin-bottom: 4px;
+}
+.home-catalog-preview .product-tile .product-tile-princing .product-price span {
+  color: #ff6b6b;
+  font-weight: 500;
+}
+
+.home-catalog-preview .product-tile .product-tile-controls {
+  text-align: center;
+}
+
+.home-catalog-preview .product-tile .a2c-cta {
+  background: none;
+  font-size: 16px;
+  text-transform: uppercase;
+  cursor: pointer;
+  color: #ff6b6b;
+  border: 1px solid #ff6b6b;
+  padding: 12px 20px;
+  border-radius: 50px;
+  transition: color 0.2s linear, background-color 0.2s linear;
+}
+
+.home-catalog-preview .product-tile .a2c-cta:hover {
+  color: #fff;
+  background-color: #ff6b6b;
+}
+
+/* social media */
+.home-cta a {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;
+  height: 236px;
+  background: #5e5e5e url(../images/banners/banner-04.jpg) center center / cover
+    no-repeat;
+  font-weight: 300;
+  color: #fff;
+  font-size: 18px;
+  text-transform: uppercase;
+  padding-right: 36px;
+}
+
+.home-cta a > :first-child {
+  display: inline-block;
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 26px;
+  text-align: right;
+}
+
+.home-cta a > span:last-of-type span {
+  font-weight: 500;
+}
+
+.home-social-media header {
+  margin-bottom: 48px;
+}
+
+.home-social-media ul {
+  text-align: center;
+}
+
+.home-social-media li {
+  display: inline-block;
+  margin: 0 8px;
+}
+
+.home-social-media ul li a {
+  display: inline-flex;
+  padding: 0 20px;
+  width: 64px;
+  height: 64px;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #5e5e5e;
+  color: #5e5e5e;
+  border-radius: 50%;
+  font-size: 30px;
+}
+
+/* our stores */
+.home-store-locator h1 {
+  margin-bottom: 48px;
+}
+
+.home-store-locator p {
+  text-align: center;
+}
+
+/* home-payment */
+.home-payment ul {
+  width: 375px;
+  margin: 24px auto 0 auto;
+  text-align: center;
+}
+
+.home-payment li {
+  display: inline-block;
+}
 /* Footer */
 
 .footer {
