--- a/monochrome/style/style.css
+++ b/monochrome/style/style.css
@@ -158,7 +158,7 @@ a {
   color: #2b2b2b;
 }
 
-.normal {
+.text-capitalize {
   text-transform: capitalize;
 }
 
@@ -166,9 +166,9 @@ a {
   position: relative;
 }
 
-/* .product-tile-image img {
+.product-tile-image img {
   width: 100%;
-} */
+}
 
 .product-badge {
   position: absolute;
@@ -194,7 +194,10 @@ a {
   text-align: center;
   margin: 24px 0px 40px 0px;
   gap: 20px;
-  width: 5.899705%;
+}
+
+.product-tile {
+  width: 24.171686%;
 }
 
 /* about */
